[gd_scene load_steps=7 format=3 uid="uid://b4uqr2ltpjjvy"]

[ext_resource type="Script" path="res://scenes/objects/bullet/bullet.gd" id="1_vxhey"]
[ext_resource type="AudioStream" uid="uid://bk85ewdo4ka13" path="res://assets/audio/sfx/Spells/Spell Impact 2.ogg" id="2_8brgr"]
[ext_resource type="Texture2D" uid="uid://c7k3pf7g833qi" path="res://assets/sprites/objects/Explosions.png" id="2_a3x5y"]
[ext_resource type="AudioStream" uid="uid://cdfdqmoc4ke2e" path="res://assets/audio/sfx/Spells/Spell Impact 1.ogg" id="2_cgnoy"]
[ext_resource type="AudioStream" uid="uid://ccnpoddccc1et" path="res://assets/audio/sfx/Spells/Spell Impact 3.ogg" id="4_peuyj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3odnn"]
radius = 19.0

[node name="Bullet" type="Node2D"]
script = ExtResource("1_vxhey")
speed = 670.0
spell_sounds = Array[AudioStream]([ExtResource("2_cgnoy"), ExtResource("2_8brgr"), ExtResource("4_peuyj")])

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_8brgr")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_a3x5y")
hframes = 9
frame = 1

[node name="HitArea" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
shape = SubResource("CircleShape2D_3odnn")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="area_entered" from="HitArea" to="." method="_on_hit_area_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
